# Proyecto_final

./: INFORME PROYECTO FINAL.docx  Informe responsabilidad desafio 3.docx  diagrama.docx  proyecto (1).docx  proyecto.docx
JuegoNapoleonN/: CMakeLists.txt  arma.cpp  arma.h  balacanon.cpp  balacanon.h  cajaArma.cpp  cajaArma.h  cannonball.cpp  cannonball.h  enemigo.cpp  enemigo.h  isla.cpp  isla.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  movimientoparticula.cpp  movimientoparticula.h  pantallanivel1.cpp  pantallanivel1.h  pantallanivel1.ui  pantallanivel2.cpp  pantallanivel2.h  pantallanivel2.ui  pantallanivel3.cpp  pantallanivel3.h  pantallanivel3.ui  personaje.cpp  personaje.h  personajenivel1.cpp  personajenivel1.h  personajenivel3.cpp  personajenivel3.h  recursos.qrc
momento 1/: Contexto juego - Desafio Final.docx
untitled25/: arma.cpp  arma.h  balacanon.cpp  balacanon.h  cajaArma.cpp  enemigo.cpp  enemigo.h  fondoaanimado.h  isla.cpp  mainwindow.cpp  mainwindow.h  pantallanivel1.cpp  pantallanivel1.h  pantallanivel3.cpp  pantallanivel3.h  personaje.cpp  personaje.h  personajenivel1.h  personajenivel3.cpp  personajenivel3.h
ventanas/: enemigos.cpp  enemigos.h  main.cpp  personaje.cpp  personaje.h  reglas_juego.cpp  reglas_juego.h  sprites.cpp  sprites.h  ventanas.cpp  ventanas.h  ventanas.pro  ventanas.ui
